# CassavaDisease

./: .gitignore  README.md  example.env  notebook.ipynb  pyproject.toml  requirements.txt  torchserve_deployment_setup.sh  torchserve_inference_setup.sh
scripts/: data_ops.py  handler_script.py  main.py
src/: handler_script.py  models.py  torchserve_inference.py  training_ops.py  utils.py
src/deployment/torchserve/: deployment.py  handler_script.py
